Se crea la pagina 404

--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>AECCI - Error 404</title>
+    <style>
+        body {
+            background: #2b2b2b;
+            color: #d3d7de;
+            font-family: "Courier new";
+            font-size: 18px;
+            line-height: 1.5em;
+            cursor: default;
+        }
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+        .code-area {
+            position: absolute;
+            width: 400px; /*275*/
+            min-width: 320px;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+        .code-area > span {
+            display: block;
+        }
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+        @media screen and (max-width: 320px) {
+            .code-area {
+                font-size: 5vw;
+                min-width: auto;
+                width: 95%;
+                margin: auto;
+                padding: 5px;
+                padding-left: 10px;
+                line-height: 6.5vw;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+<div class="container-fluid">
+    <div class="code-area">
+        <span style="margin-bottom: 50px; margin-top:-80px;">
+            <img src="favicon.ico" class="img-responsive center-block">
+        </span>
+        <span style="color: #777;font-style:italic;">
+    // 404 page not found.
+  </span>
+        <span>
+    <span style="color:#d65562;">
+      if
+    </span>
+	  (<span style="color:#4ca8ef;">!</span><span style="font-style: italic;color:#bdbdbd;">found</span>)
+    {
+  </span>
+        <span>
+    <span style="padding-left: 15px;color:#2796ec">
+       <i style="width: 10px;display:inline-block;"></i>throw
+    </span>
+    <span>
+      (<span style="color: #a6a61f;font-size:15px;">"La página no existe (╯°□°)╯"</span>);
+    </span>
+	  <span style="display:block;">}</span>
+  </span>
+        <span style="text-align: center;">
+            <a href="/" style="color:#f96816;">Volver</a>
+        </span>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+</div>
 </body>
 </html>
