--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,6 @@
             line-height: 1.5em;
             cursor: default;
         }
-
         .code-area {
             position: absolute;
             width: 400px; /*275*/
@@ -28,20 +27,18 @@
             -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
-
         .code-area > span {
             display: block;
         }
-
-        @media screen and (max-width: 320px) {
+        @media screen and (max-width: 767px) {
             .code-area {
-                font-size: 5vw;
+                font-size: 14px;
                 min-width: auto;
-                width: 95%;
+                width: 100%;
                 margin: auto;
                 padding: 5px;
                 padding-left: 10px;
-                line-height: 6.5vw;
+                line-height: 1em;
             }
         }
     </style>
@@ -51,7 +48,7 @@
 <div class="container-fluid">
     <div class="code-area">
         <span style="margin-bottom: 50px; margin-top:-80px;">
-            <img src="favicon.ico" class="img-responsive center-block">
+            <img src="logo_asocia.png" style="max-width: 200px; max-height: 100%;" class="img-responsive center-block">
         </span>
         <span style="color: #777;font-style:italic;">
     // 404 page not found.
@@ -68,7 +65,7 @@
        <i style="width: 10px;display:inline-block;"></i>throw
     </span>
     <span>
-      (<span style="color: #a6a61f;font-size:15px;">"La página no existe (╯°□°)╯"</span>);
+      (<span style="color: #a6a61f;font-size:15px;">"La página no existe"</span>);
     </span>
 	  <span style="display:block;">}</span>
   </span>
