Se arregla la referencia a la imagen del 404

--- a/public/404.html
+++ b/public/404.html
@@ -48,7 +48,7 @@
 <div class="container-fluid">
     <div class="code-area">
         <span style="margin-bottom: 50px; margin-top:-80px;">
-            <img src="logo_asocia.png" style="max-width: 200px; max-height: 100%;" class="img-responsive center-block">
+            <img src="/assets/images/logo_asocia.png" style="max-width: 200px; max-height: 100%;" class="img-responsive center-block">
         </span>
         <span style="color: #777;font-style:italic;">
     // 404 page not found.
