--- a/public/500.html
+++ b/public/500.html
@@ -51,7 +51,7 @@
 <div class="container-fluid">
     <div class="code-area">
         <span style="margin-bottom: 50px; margin-top:-80px;">
-            <img src="/assets/images/logo_asocia.png" style="max-width: 200px; max-height: 100%;"
+            <img src="/logo_asocia.png" style="max-width: 200px; max-height: 100%;"
                  class="img-responsive center-block">
         </span>
         <span style="color: #777;font-style:italic;">
